test/semantic_error/invalid_type_unary.c
/*
Semantic error: Function 'f' is not declared at line 5 column 6
*/
int main(){
    int a;
    !a;
    return 0;
}